--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
     "cSpell.ignoreWords": [
+        "com",
+        "datas",
+        "email",
         "express",
+        "gmail",
+        "inactive",
+        "ohma",
+        "status",
+        "tokita",
         "traversymedia"
     ]
 }
